--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gymboxx Bishan | Home</title>
+        <title>Gymmboxx Bishan | Home</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
@@ -13,7 +13,7 @@
                     <li><a href="facilities.html">FACILITIES</a></li>
                 </ul>
             </nav>
-            <h1 class="gym-name gym-name-large" onclick="location.href='index.html'">Gymboxx @ Bishan CC</h1>
+            <h1 class="gym-name gym-name-large" onclick="location.href='index.html'">Gymmboxx @ Bishan CC</h1>
             
         </header>
         <section class="content-section container">
@@ -55,8 +55,8 @@
                 </ul>
             </div>
             <div class="copyright">
-                <small><i>Copyright &copy; 2022 Gymboxx Bishan</i></small><br>
-                <small><i><a href="mailto:hello@gymboxx.com">hello@gymboxx.com</a></i></small>
+                <small><i>Copyright &copy; 2022 Gymmboxx Bishan</i></small><br>
+                <small><i><a href="mailto:hello@gymmboxx.com">hello@gymboxx.com</a></i></small>
             </div>
         </footer>
     </body>
