--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <h3 class="gym-name">Gymboxx Bishan</h3>
+                <h3 class="gym-name">Gymmboxx Bishan</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
