--- a/rates.html
+++ b/rates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gymboxx Bishan | Rates</title>
+        <title>Gymmboxx Bishan | Rates</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
@@ -50,7 +50,7 @@
         </section>
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <h3 class="gym-name">Gymboxx Bishan</h3>
+                <h3 class="gym-name">Gymmboxx Bishan</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
@@ -70,8 +70,8 @@
                 </ul>
             </div>
             <div class="copyright">
-                <small><i>Copyright &copy; 2022 Gymboxx Bishan</i></small><br>
-                <small><i><a href="mailto:hello@gymboxx.com">hello@gymboxx.com</a></i></small>
+                <small><i>Copyright &copy; 2022 Gymmboxx Bishan</i></small><br>
+                <small><i><a href="mailto:hello@gymboxx.com">hello@gymmboxx.com</a></i></small>
             </div>
         </footer>
     </body>
