--- a/facilities.html
+++ b/facilities.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gymboxx Bishan | Facilities</title>
+        <title>Gymmboxx Bishan | Facilities</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
@@ -13,7 +13,7 @@
                     <li><a href="facilities.html">FACILITIES</a></li>
                 </ul>
             </nav>
-            <h1 class="gym-name gym-name-large" onclick="location.href='index.html'">Gymboxx @ Bishan CC</h1>
+            <h1 class="gym-name gym-name-large" onclick="location.href='index.html'">Gymmboxx @ Bishan CC</h1>
         </header>
         <section class="container content-section">
             <h2 class="section-header">Facilites</h2>
@@ -47,7 +47,7 @@
         
         <footer class="main-footer">
             <div class="container main-footer-container">
-                <h3 class="gym-name">Gymboxx Bishan</h3>
+                <h3 class="gym-name">Gymmboxx Bishan</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
@@ -67,8 +67,8 @@
                 </ul>
             </div>
             <div class="copyright">
-                <small><i>Copyright &copy; 2022 Gymboxx Bishan</i></small><br>
-                <small><i><a href="mailto:hello@gymboxx.com">hello@gymboxx.com</a></i></small>
+                <small><i>Copyright &copy; 2022 Gymmboxx Bishan</i></small><br>
+                <small><i><a href="mailto:hello@gymmboxx.com">hello@gymmboxx.com</a></i></small>
             </div>
         </footer>
     </body>
