--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div class="copyright">
                 <small><i>Copyright &copy; 2022 Gymmboxx Bishan</i></small><br>
-                <small><i><a href="mailto:hello@gymmboxx.com">hello@gymboxx.com</a></i></small>
+                <small><i><a href="mailto:hello@gymmboxx.com">hello@gymmboxx.com</a></i></small>
             </div>
         </footer>
     </body>
