--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
-                            <i class="fa-brands fa-youtube"></i>
+                            <i class="fa-brands fa-youtube" style="color:#ffffff;" ></i>
                         </a>
                     </li>
                     <li>
