--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Gymmboxx Bishan | Home</title>
-        <link rel="stylesheet" href="styles.css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css/>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header class="main-header">
@@ -39,7 +39,7 @@
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
-                            <i class="fa-brands fa-youtube" style="color:#ffffff;" ></i>
+                            <img src="Images/Youtube Logo.png">
                         </a>
                     </li>
                     <li>
