--- a/rates.html
+++ b/rates.html
@@ -54,7 +54,7 @@
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.youtube.com" target="_blank">
-                            <img src="Images/YouTube Logo.png">
+                            <img src="Images/Youtube Logo.png">
                         </a>
                     </li>
                     <li>
