--- a/rates.html
+++ b/rates.html
@@ -13,7 +13,7 @@
                     <li><a href="facilities.html">FACILITIES</a></li>
                 </ul>
             </nav>
-            <h1 class="gym-name gym-name-large" onclick="location.href='index.html'">Gymboxx @ Bishan CC</h1>
+            <h1 class="gym-name gym-name-large" onclick="location.href='index.html'">Gymmboxx @ Bishan CC</h1>
         </header>
         <section class="container content-section">
             <h2 class="section-header">MEMBERSHIP PLANS</h2>
