--- a/facilities.html
+++ b/facilities.html
@@ -50,7 +50,7 @@
                 <h3 class="gym-name">Gymmboxx Bishan</h3>
                 <ul class="nav footer-nav">
                     <li>
-                        <a href="https://www.youtube.com" target="_blank">
+                        <a href="https://www.youtube.com/watch?v=LASOaAOm6ac" target="_blank">
                             <img src="Images/Youtube Logo.png">
                         </a>
                     </li>
