--- a/facilities.html
+++ b/facilities.html
@@ -55,8 +55,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.spotify.com" target="_blank">
-                            <img src="Images/Spotify Logo.png">
+                        <a href="https://www.instagram.com/gymmboxx/" target="_blank">
+                            <img src="Images/Instagram Logo.png">
                         </a>
                     </li>
                     <li>
