--- a/facilities.html
+++ b/facilities.html
@@ -16,31 +16,31 @@
             <h1 class="gym-name gym-name-large" onclick="location.href='index.html'">Gymmboxx @ Bishan CC</h1>
         </header>
         <section class="container content-section">
-            <h2 class="section-header">Facilites</h2>
+            <h2 class="section-header">Facilities</h2>
             <div class="shop-items">
                 <div class="shop-item">
-                    <span class="shop-item-title">Shower</span>
+                    <span class="shop-item-title">Showering Amenities</span>
                     <img class="shop-item-image" src="Images/facilities1.png">
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Power Racks X6</span>
+                    <span class="shop-item-title">6X Power Racks</span>
                     <img class="shop-item-image" src="Images/facilities2.png">
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Cashless</span>
+                    <span class="shop-item-title">Cashless Payment</span>
                     <img class="shop-item-image" src="Images/facilities3.png">
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Shower</span>
-                    <img class="shop-item-image" src="Images/facilities1.png">
+                    <span class="shop-item-title">Elite Strength Equipment</span>
+                    <img class="shop-item-image" src="Images/facilities4.png">
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Power Racks X6</span>
-                    <img class="shop-item-image" src="Images/facilities2.png">
+                    <span class="shop-item-title">Digital Cardiovascular Equipment</span>
+                    <img class="shop-item-image" src="Images/facilities5.png">
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Cashless</span>
-                    <img class="shop-item-image" src="Images/facilities3.png">
+                    <span class="shop-item-title">Variety Of Free Weights</span>
+                    <img class="shop-item-image" src="Images/facilities6.png">
                 </div>
             </div>
         </section>
