--- a/facilities.html
+++ b/facilities.html
@@ -35,11 +35,11 @@
                     <img class="shop-item-image" src="Images/facilities4.png">
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Digital Cardiovascular Equipment</span>
+                    <span class="shop-item-title">Cardiovascular Equipment</span>
                     <img class="shop-item-image" src="Images/facilities5.png">
                 </div>
                 <div class="shop-item">
-                    <span class="shop-item-title">Variety Of Free Weights</span>
+                    <span class="shop-item-title">Free Weights</span>
                     <img class="shop-item-image" src="Images/facilities6.png">
                 </div>
             </div>
