--- a/rates.html
+++ b/rates.html
@@ -22,14 +22,7 @@
                     <span class="shop-item-title">1 Month</span>
                     <img class="shop-item-image" src="Images/plan1.jpeg">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">$xxx</span>
-                    </div>
-                </div>
-                <div class="shop-item">
-                    <span class="shop-item-title">3 Months</span>
-                    <img class="shop-item-image" src="Images/plan2.jpeg">
-                    <div class="shop-item-details">
-                        <span class="shop-item-price">$xxx</span>
+                        <span class="shop-item-price">Student:$95| Ad</span>
                     </div>
                 </div>
                 <div class="shop-item">
