--- a/rates.html
+++ b/rates.html
@@ -22,7 +22,7 @@
                     <span class="shop-item-title">1 Month</span>
                     <img class="shop-item-image" src="Images/plan1.jpeg">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">Student:$95| Ad</span>
+                        <span class="shop-item-price">Student:$95 | Adult:$110 | Senior:$75</span>
                     </div>
                 </div>
                 <div class="shop-item">
