--- a/rates.html
+++ b/rates.html
@@ -29,7 +29,7 @@
                     <span class="shop-item-title">6 Months</span>
                     <img class="shop-item-image" src="Images/plan3.jpeg">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">$xxx</span>
+                        <span class="shop-item-price">Student:$75/mth | Adult:$90/mth | Senior:$65/mth</span>
                     </div>
                 </div>
                 <div class="shop-item">
