--- a/rates.html
+++ b/rates.html
@@ -36,7 +36,7 @@
                     <span class="shop-item-title">1 Year</span>
                     <img class="shop-item-image" src="Images/plan4.jpeg">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">$xxx</span>
+                        <span class="shop-item-price">Student:$60/mth | Adult:$75/mth | Senior:$50/mth</span>
                     </div>
                 </div>
             </div>
