--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </p></b>
                     <p class="location-description">Operating Hours: Open 24hours from Mon-Sun
                     </p>
-                    <img src="Images/gymmboxxpic.jpeg">
+                    <img src="Images/gymboxxpic.jpeg">
                 </div>
             </div>
         </section>
