--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
                     <b><p class="location-description">51 BISHAN STREET 13 (BISHAN COMMUNITY CLUB)
                             <br>#04-01/02
                             <br>S(579799)
-                       <br><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.710981422608!2d103.84865351518033!3d1.3499304619501789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da171400a6356d%3A0x1889d0456bf6a9cf!2sGYMMBOXX%20Bishan!5e0!3m2!1sen!2ssg!4v1644931950024!5m2!1sen!2ssg" 
-width="680" height="450" style="border: 5px solid black;" allowfullscreen="" loading="lazy" align="left"></iframe>
                     </p></b>
-                  <p class="location-description">Operating Hours: Open 24hours from Mon-Sun
-                    </p>
+                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.710981422608!2d103.84865351518033!3d1.3499304619501789!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da171400a6356d%3A0x1889d0456bf6a9cf!2sGYMMBOXX%20Bishan!5e0!3m2!1sen!2ssg!4v1644931950024!5m2!1sen!2ssg" 
+width="680" height="450" style="border: 5px solid black;" allowfullscreen="" loading="lazy" align="left"></iframe>
                     <img src="Images/gymboxxpic.jpeg">
                 </div>
             </div>
