--- a/rates.html
+++ b/rates.html
@@ -17,27 +17,30 @@
         </header>
         <section class="container content-section">
             <h2 class="section-header">MEMBERSHIP PLANS</h2>
-            <div class="rates-container">
+                       <div class="rates-container">
                 <div class="rates-1month">
                     <span class="shop-item-title">1 Month</span>
-                    <img class="shop-item-image" src="Images/plan1.jpeg">
+                    <img class="rates-image" src="Images/plan1.jpeg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">Student:$95 | Adult:$110 | Senior:$75</span>
                     </div>
+                    <br>
                 </div>
                 <div class="rates-6months">
                     <span class="shop-item-title">6 Months</span>
-                    <img class="shop-item-image" src="Images/plan3.jpeg">
+                    <img class="rates-image" src="Images/plan3.jpeg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">Student:$75/mth | Adult:$90/mth | Senior:$65/mth</span>
                     </div>
+                    <br>
                 </div>
                 <div class="rates-1year">
                     <span class="shop-item-title">1 Year</span>
-                    <img class="shop-item-image" src="Images/plan4.jpeg">
+                    <img class="rates-image" src="Images/plan4.jpeg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">Student:$60/mth | Adult:$75/mth | Senior:$50/mth</span>
                     </div>
+                    <br>
                 </div>
             </div>
         </section>
