--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
                 <div class="gym-row">
                     <h2 class="location-header">Bishan CC</h2>
-                    <p class="location-description">Located at Bishan Community Club, Level 4 (Near Bishan MRT). <br>This GYMMBOXX outlet is equipped with an interactive cardio line, <br>a spacious functional area with the latest trending fitness accessories and an extended 31m lunge track.
+                    <p class="location-description">Located at Bishan Community Club, Level 4 (Near Bishan MRT). <br>This 6000 SQ FT GYMMBOXX outlet is equipped with an interactive cardio line, <br>a spacious functional area with the latest trending fitness accessories and an extended 31m lunge track.
                     </p>
                     <p class="location-description">Operating Hours: Open 24hours from Mon-Sun
                     </p>
